--- a/process.env
+++ b/process.env
@@ -1,4 +1,5 @@
-MONGODB_URI=mongodb://localhost:27017/currency-api
-EMAIL=your-email@gmail.com
-EMAIL_PASSWORD=your-email-password
-PORT=3000
+# MONGODB_URI=mongodb://localhost:27017/currency-api
+# EMAIL=your-email@gmail.com
+# EMAIL_PASSWORD=your-email-password
+# PORT=3000
+# # 
